bugfix scrollbar + thin scrollbar design

--- a/css/add_task_overlay.css
+++ b/css/add_task_overlay.css
@@ -32,7 +32,7 @@
 }
 
 .add-task-overlay-content section {
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .task-overlay-confirm-animation {
