--- a/css/board_Responsive.css
+++ b/css/board_Responsive.css
@@ -44,8 +44,6 @@
 @media (max-width: 1100px) {
     .add-task-form {
         flex-direction: column;
-        overflow: scroll;
-        overflow-x: hidden;
     }
 
     form {
